[gd_scene load_steps=3 format=3 uid="uid://clwyd0swmgyee"]

[ext_resource type="Script" path="res://HUD/HUD.gd" id="1_k0yka"]
[ext_resource type="FontFile" uid="uid://1ho6nob68lja" path="res://fonts/retrofont.ttf" id="1_nwfok"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_k0yka")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 148.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("1_nwfok")
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("1_nwfok")
theme_override_font_sizes/font_size = 24
text = "High Score: 0"
horizontal_alignment = 2

[node name="StartButton" type="Button" parent="."]
offset_left = 410.0
offset_top = 267.0
offset_right = 681.0
offset_bottom = 329.0
theme_override_colors/font_color = Color(0.692302, 0.645712, 0.649832, 1)
theme_override_fonts/font = ExtResource("1_nwfok")
theme_override_font_sizes/font_size = 29
text = "Puchale start"

[node name="ScoreTimer" type="Timer" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
